fix: publications overflow

--- a/src/blocks/publications/publications.css
+++ b/src/blocks/publications/publications.css
@@ -3,6 +3,7 @@
   padding: 40px 16px 32px 16px;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .publications__title {
